# discord-rust-music-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
docs/: DEPLOYMENT.md
src/: main.rs  permissions.rs  storage.rs  web.rs
src/commands/: autoplay.rs  config.rs  djrole.rs  help.rs  history.rs  leave.rs  mod.rs  normalize.rs  now.rs  play.rs  playlist.rs  playnow.rs  previous.rs  queue.rs  replay.rs  seek.rs  shuffle.rs  stats.rs  volume.rs  voteskip.rs
src/interactions/: buttons.rs
src/music/: mod.rs  player.rs  state.rs  track.rs
src/ui/: help_panel.rs  mod.rs  player_panel.rs  queue_panel.rs
src/web/: app.css  app.js  docs.rs
