[package]
name = "discord-rust-music-bot"
version = "2.2.1"
edition = "2021"

[dependencies]
poise = "0.6.2"
serenity = { version = "0.12.5", default-features = false, features = [
  "client",
  "gateway",
  "model",
  "rustls_backend",
  "cache",
  "builder",
  "collector",
] }
songbird = { version = "0.6.0", features = ["serenity", "builtin-queue"] }
symphonia = { version = "0.5.5", features = ["aac", "isomp4", "mkv", "mp3", "ogg", "vorbis", "wav"] }

tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-stream = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
axum = { version = "0.8", features = ["form", "query"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
aes-gcm = "0.10"
sha2 = "0.10"

dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "2"
url = "2"
async-trait = "0.1"
rusqlite = { version = "0.37", features = ["backup", "bundled"] }
serde_json = "1"
